--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-router-dom": "^5.3.3"
   }
 }
